Removed serverless additional command

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ env:
 script:
 - docker build -t deploy .
 after_success:
-- docker run -e AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} -e AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} -e AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} deploy s3://linn.lambdas/alexa-smart-home-skill.${TRAVIS_BUILD_NUMBER}.zip
+- docker run -e AWS_DEFAULT_REGION=${AWS_DEFAULT_REGION} -e AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID} -e AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY} deploy
